# MiniGit

./: .gitignore  CMakeLists.txt  README.md
include/: CommitBuilder.h  Index.h  RefManager.h  Repository.h  WorkingDirectory.h
include/commands/: AddCommand.h  CatObjectCommand.h  CheckoutCommand.h  CommandParser.h  CommitCommand.h  ICommand.h  InitCommand.h  LogCommand.h  StatusCommand.h
include/exceptions/: MiniGitException.h
include/hashing/: FnvHashStrategy.h  IHashStrategy.h  SimpleHashStrategy.h
include/objects/: Blob.h  Commit.h  GitObject.h  Tree.h  TreeEntry.h
include/storage/: ObjectDatabase.h  ObjectStore.h
include/utils/: Templates.h
src/: CommitBuilder.cpp  Index.cpp  RefManager.cpp  Repository.cpp  WorkingDirectory.cpp  main.cpp
src/commands/: AddCommand.cpp  CatObjectCommand.cpp  CheckoutCommand.cpp  CommandParser.cpp  CommitCommand.cpp  InitCommand.cpp  LogCommand.cpp  StatusCommand.cpp
src/hashing/: SimpleHashStrategy.cpp
src/objects/: Blob.cpp  Commit.cpp  Tree.cpp
src/storage/: ObjectDatabase.cpp
